--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "easycorp/easyadmin-bundle": "^3.0",
+        "friendsofsymfony/rest-bundle": "^3.0",
         "jms/serializer-bundle": "^3.7",
+        "nelmio/api-doc-bundle": "^4.1",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "5.2.*",
         "symfony/console": "5.2.*",
